--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ h1{
 }
 section{
     display: flex;
+    margin: 100px;
 }
 .half-width{
     width:50% ;
     padding-left: 5%;
 }
 .half-width img{
-    width: 80%;
+    width: 100%;
 }
 .link-button{
 text-decoration: none;
@@ -30,4 +31,9 @@ border-radius: 5px;
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
